@startuml FeatG46_GetFloodStatistics_ClassDiagram
!define RECTANGLE class

skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #000000
skinparam packageBackgroundColor #E8E8E8
skinparam packageBorderColor #666666
skinparam stereotypeCBackgroundColor #ADD1B2
skinparam arrowColor #333333

title FeatG46_GetFloodStatistics - Class Diagram\n(Domain-Centric Architecture + CQRS Pattern)

' ============================================
' PRESENTATION LAYER
' ============================================
package "PRESENTATION LAYER" #E1D5E7 {
  class GetFloodStatisticsEndpoint <<Endpoint>> {
    - _mediator: IMediator
    --
    + Configure(): void
    + HandleAsync(req: GetFloodStatisticsRequestDto, ct): Task
  }

  class GetFloodStatisticsRequestDto <<DTO>> {
    + StationId: Guid?
    + StationIds: List<Guid>?
    + AreaId: Guid?
    + Period: string
    + IncludeBreakdown: bool
    + IncludeComparison: bool
  }

  class GetFloodStatisticsResponseDto <<DTO>> {
    + Success: bool
    + Message: string
    + Data: FloodStatisticsDto?
  }

  GetFloodStatisticsEndpoint --> GetFloodStatisticsRequestDto : uses
  GetFloodStatisticsEndpoint --> GetFloodStatisticsResponseDto : returns
}

' ============================================
' APPLICATION LAYER
' ============================================
package "APPLICATION LAYER" #D5E8D4 {
  class GetFloodStatisticsRequest <<Record>> {
    + StationId: Guid?
    + StationIds: List<Guid>?
    + AreaId: Guid?
    + Period: string
    + IncludeBreakdown: bool
    + IncludeComparison: bool
  }

  class GetFloodStatisticsResponse <<Response>> {
    + Success: bool
    + Message: string
    + StatusCode: FloodHistoryStatusCode
    + Data: FloodStatisticsDto?
  }

  class GetFloodStatisticsHandler <<Handler>> {
    - _dailyAggRepository: ISensorDailyAggRepository
    - _stationRepository: IStationRepository
    - _mapper: IFloodHistoryMapper
    --
    + Handle(request, ct): Task<GetFloodStatisticsResponse>
    - CalculateDateRange(period): (DateTime, DateTime)
    - CalculateSummary(dailyAggs, start, end): FloodStatisticsSummaryDto
    - CalculateSeverityBreakdown(dailyAggs): FloodStatisticsSeverityBreakdownDto
    - CalculateComparison(stationId, start, end, current, ct): Task<FloodTrendComparisonDto?>
    - CalculateDataQuality(dailyAggs, start, end): DataQualityDto
  }

  class GetFloodStatisticsRequestValidator <<Validator>> {
    --
    + GetFloodStatisticsRequestValidator()
  }

  interface IRequestHandler {
    + Handle(request, ct): Task<Response>
  }

  enum FloodHistoryStatusCode <<Enumeration>> {
    Success
    BadRequest
    NotFound
    InternalServerError
  }

  class FloodStatisticsDto <<DTO>> {
    + StationId: Guid
    + StationName: string
    + StationCode: string
    + PeriodStart: DateTime
    + PeriodEnd: DateTime
    + Summary: FloodStatisticsSummaryDto
    + SeverityBreakdown: FloodStatisticsSeverityBreakdownDto?
    + Comparison: FloodTrendComparisonDto?
    + DataQuality: DataQualityDto
  }

  class FloodStatisticsSummaryDto <<DTO>> {
    + MaxWaterLevel: double
    + MinWaterLevel: double
    + AvgWaterLevel: double
    + TotalFloodHours: int
    + TotalReadings: int
    + MissingIntervals: int
  }

  class FloodStatisticsSeverityBreakdownDto <<DTO>> {
    + HoursSafe: int
    + HoursCaution: int
    + HoursWarning: int
    + HoursCritical: int
  }

  class FloodTrendComparisonDto <<DTO>> {
    + PreviousPeriodStart: DateTime
    + PreviousPeriodEnd: DateTime
    + FloodHoursChange: double
    + FloodHoursChangePercent: double
    + AvgLevelChange: double
    + AvgLevelChangePercent: double
  }

  class DataQualityDto <<DTO>> {
    + TotalExpectedReadings: int
    + ActualReadings: int
    + CoveragePercent: double
    + MissingDays: int
  }

  GetFloodStatisticsHandler ..|> IRequestHandler : implements
  GetFloodStatisticsHandler --> GetFloodStatisticsRequest : handles
  GetFloodStatisticsHandler --> GetFloodStatisticsResponse : returns
  GetFloodStatisticsResponse --> FloodHistoryStatusCode : contains
  GetFloodStatisticsRequestValidator --> GetFloodStatisticsRequest : validates
}

' ============================================
' DOMAIN LAYER - Entities
' ============================================
package "DOMAIN LAYER - Entities" #F8CECC {
  class SensorDailyAgg <<Entity>> {
    + StationId: Guid
    + Date: DateOnly
    + AvgLevel: decimal
    + MaxLevel: decimal
    + MinLevel: decimal
    + ReadingCount: int
    + FloodHours: int
    + PeakSeverity: int
    + RainfallTotal: decimal?
  }

  class Station <<Entity>> {
    + Id: Guid
    + Name: string
    + Code: string
    + Latitude: decimal
    + Longitude: decimal
  }

  Station "1" *-- "many" SensorDailyAgg
}

' ============================================
' DOMAIN LAYER - Repositories
' ============================================
package "DOMAIN LAYER - Repositories" #FFE6CC {
  interface ISensorDailyAggRepository <<Interface>> {
    + GetByStationAndRangeAsync(stationId, startDate, endDate, ct): Task<List<SensorDailyAgg>>
  }

  interface IStationRepository <<Interface>> {
    + GetByIdAsync(id: Guid, ct): Task<Station?>
  }
}

' ============================================
' COMMON SERVICES
' ============================================
package "COMMON SERVICES" #E1D5E7 {
  interface IMediator <<Interface>> {
    + Send<TResponse>(request, ct): Task<TResponse>
  }

  interface IFloodHistoryMapper <<Interface>> {
    + MapToStatistics(dailyAggs: List<SensorDailyAgg>): FloodStatisticsDto
  }

  interface IFeatureRequest <<Interface>> { }
  interface IFeatureResponse <<Interface>> { }

  GetFloodStatisticsRequest ..|> IFeatureRequest
  GetFloodStatisticsResponse ..|> IFeatureResponse
}

' ============================================
' RELATIONSHIPS
' ============================================
GetFloodStatisticsEndpoint ..> IMediator : uses
GetFloodStatisticsEndpoint ..> GetFloodStatisticsRequest : sends

GetFloodStatisticsHandler ..> ISensorDailyAggRepository : uses
GetFloodStatisticsHandler ..> IStationRepository : uses
GetFloodStatisticsHandler ..> IFloodHistoryMapper : uses

GetFloodStatisticsRequestDto ..> GetFloodStatisticsRequest : maps to
GetFloodStatisticsResponseDto ..> GetFloodStatisticsResponse : maps from

GetFloodStatisticsResponse *-- FloodStatisticsDto
FloodStatisticsDto *-- FloodStatisticsSummaryDto
FloodStatisticsDto *-- FloodStatisticsSeverityBreakdownDto
FloodStatisticsDto *-- FloodTrendComparisonDto
FloodStatisticsDto *-- DataQualityDto

FloodStatisticsDto ..> SensorDailyAgg : calculates from

' ============================================
' LEGEND
' ============================================
legend bottom left
  | Color | Layer |
  | #E1D5E7 | Presentation Layer & Common Services |
  | #D5E8D4 | Application Layer |
  | #F8CECC | Domain Entities |
  | #FFE6CC | Domain Repositories |
  | | |
  | Line Style | Meaning |
  | --> | Dependency |
  | ..> | Uses/Sends |
  | ..\|> | Implements |
  | *-- | Composition |
  | | |
  | Feature: Get Flood Statistics |
  | Summary: max/min/avg water level, total flood hours |
  | Optional breakdown by severity (Safe/Caution/Warning/Critical) |
  | Optional comparison with previous period |
  | Data quality metrics included |
endlegend

@enduml
